feat(api): Add subsets cyrillic, cyrillic-ext, hebrew, greek and greek-ext
